--- a/portfolio.html
+++ b/portfolio.html
@@ -24,5 +24,118 @@
         </ul>
       </address>
     </header>
+    <!-- Основной контент страницы Портфолио-->
+    <main>
+      <!--Кнопки классификации проектов-->
+      <section>
+        <h1 hidden>Классификация проектов</h1>
+        <button type="button">Все</button>
+        <button type="button">Веб-сайты</button>
+        <button type="button">Приложения</button>
+        <button type="button">Дизайн</button>
+        <button type="button">Маркетинг</button>
+      </section>
+      <!--Карточки проектов-->
+      <section>
+        <h2 hidden>Карточки работ</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/portfolio/img-1.jpg"
+              alt="Ноутбук с открытым веб-сайтом"
+              width="370"
+            />
+            <h3>Технокряк</h3>
+            <p>Веб-сайт</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/img-2.jpg"
+              alt="Люди играют в баскетбол"
+              width="370"
+            />
+            <h3>Постер <span lang="en">New Orlean vs Golden Star</span></h3>
+            <p>Дизайн</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/img-3.jpg"
+              alt="Логотип в форме рыбы"
+              width="370"
+            />
+            <h3>Ресторан <span lang="en">Seafood</span></h3>
+            <p>Приложение</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/img-4.jpg"
+              alt="Наушники"
+              width="370"
+            />
+            <h3>Проект <span lang="en">Prime</span></h3>
+            <p>Маркетинг</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/img-5.jpg"
+              alt="Коричневая и белая коробка"
+              width="370"
+            />
+            <h3>Проект <span lang="en">Boxes</span></h3>
+            <p>Приложение</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/img-6.jpg"
+              alt="Монитор с открытым веб-сайтом"
+              width="370"
+            />
+            <h3 lang="en">Inspiration has no Borders</h3>
+            <p>Веб-сайт</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/img-7.jpg"
+              alt="Разворот журнала"
+              width="370"
+            />
+            <h3>Издание <span lang="en">Limited Edition</span></h3>
+            <p>Дизайн</p>
+          </li>
+          <li>
+            <img src="./images/portfolio/img-8.jpg" alt="Бирка" width="370" />
+            <h3>Проект <span lang="en">LAB</span></h3>
+            <p>Маркетинг</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/img-9.jpg"
+              alt="Ноутбук с открытым веб-сайтом"
+              width="370"
+            />
+            <h3 lang="en">Growing Business</h3>
+            <p>Приложение</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <!--Подвал страницы-->
+    <footer>
+      <a href="./index.html" lang="en">WebStudio</a>
+      <address id="contact">
+        <ul>
+          <li>
+            <a
+              href="https://goo.gl/maps/ynUxc8E4dddoSUbA6"
+              target="blank"
+              rel="noopener noreferer"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
+          </li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+      </address>
+    </footer>
   </body>
 </html>
