Правки от ментора
Кнопки делаем списком, объединяем в одну секцию, правим иирархию заголовков

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,15 +29,24 @@
       <!--Кнопки классификации проектов-->
       <section>
         <h1 hidden>Классификация проектов</h1>
-        <button type="button">Все</button>
-        <button type="button">Веб-сайты</button>
-        <button type="button">Приложения</button>
-        <button type="button">Дизайн</button>
-        <button type="button">Маркетинг</button>
-      </section>
-      <!--Карточки проектов-->
-      <section>
-        <h2 hidden>Карточки работ</h2>
+        <ul>
+          <li>
+            <button type="button">Все</button>
+          </li>
+          <li>
+            <button type="button">Веб-сайты</button>
+          </li>
+          <li>
+            <button type="button">Приложения</button>
+          </li>
+          <li>
+            <button type="button">Дизайн</button>
+          </li>
+          <li>
+            <button type="button">Маркетинг</button>
+          </li>
+        </ul>
+        <!--Проекты-->
         <ul>
           <li>
             <img
@@ -45,7 +54,7 @@
               alt="Ноутбук с открытым веб-сайтом"
               width="370"
             />
-            <h3>Технокряк</h3>
+            <h2>Технокряк</h2>
             <p>Веб-сайт</p>
           </li>
           <li>
@@ -54,7 +63,7 @@
               alt="Люди играют в баскетбол"
               width="370"
             />
-            <h3>Постер <span lang="en">New Orlean vs Golden Star</span></h3>
+            <h2>Постер <span lang="en">New Orlean vs Golden Star</span></h2>
             <p>Дизайн</p>
           </li>
           <li>
@@ -63,7 +72,7 @@
               alt="Логотип в форме рыбы"
               width="370"
             />
-            <h3>Ресторан <span lang="en">Seafood</span></h3>
+            <h2>Ресторан <span lang="en">Seafood</span></h2>
             <p>Приложение</p>
           </li>
           <li>
@@ -72,7 +81,7 @@
               alt="Наушники"
               width="370"
             />
-            <h3>Проект <span lang="en">Prime</span></h3>
+            <h2>Проект <span lang="en">Prime</span></h2>
             <p>Маркетинг</p>
           </li>
           <li>
@@ -81,7 +90,7 @@
               alt="Коричневая и белая коробка"
               width="370"
             />
-            <h3>Проект <span lang="en">Boxes</span></h3>
+            <h2>Проект <span lang="en">Boxes</span></h2>
             <p>Приложение</p>
           </li>
           <li>
@@ -90,7 +99,7 @@
               alt="Монитор с открытым веб-сайтом"
               width="370"
             />
-            <h3 lang="en">Inspiration has no Borders</h3>
+            <h2 lang="en">Inspiration has no Borders</h2>
             <p>Веб-сайт</p>
           </li>
           <li>
@@ -99,7 +108,7 @@
               alt="Разворот журнала"
               width="370"
             />
-            <h3>Издание <span lang="en">Limited Edition</span></h3>
+            <h2>Издание <span lang="en">Limited Edition</span></h2>
             <p>Дизайн</p>
           </li>
           <li>
@@ -113,7 +122,7 @@
               alt="Ноутбук с открытым веб-сайтом"
               width="370"
             />
-            <h3 lang="en">Growing Business</h3>
+            <h2 lang="en">Growing Business</h2>
             <p>Приложение</p>
           </li>
         </ul>
