--- a/portfolio.html
+++ b/portfolio.html
@@ -49,81 +49,99 @@
         <!--Проекты-->
         <ul>
           <li>
-            <img
-              src="./images/portfolio/img-1.jpg"
-              alt="Ноутбук с открытым веб-сайтом"
-              width="370"
-            />
-            <h2>Технокряк</h2>
-            <p>Веб-сайт</p>
+            <a href="" target="_blank" rel="noreferrer noopener">
+              <img
+                src="./images/portfolio/img-1.jpg"
+                alt="Ноутбук с открытым веб-сайтом"
+                width="370"
+              />
+              <h2>Технокряк</h2>
+              <p>Веб-сайт</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/portfolio/img-2.jpg"
-              alt="Люди играют в баскетбол"
-              width="370"
-            />
-            <h2>Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-            <p>Дизайн</p>
+            <a href="" target="_blank" rel="noreferrer noopener">
+              <img
+                src="./images/portfolio/img-2.jpg"
+                alt="Люди играют в баскетбол"
+                width="370"
+              />
+              <h2>Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+              <p>Дизайн</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/portfolio/img-3.jpg"
-              alt="Логотип в форме рыбы"
-              width="370"
-            />
-            <h2>Ресторан <span lang="en">Seafood</span></h2>
-            <p>Приложение</p>
+            <a href="" target="_blank" rel="noreferrer noopener">
+              <img
+                src="./images/portfolio/img-3.jpg"
+                alt="Логотип в форме рыбы"
+                width="370"
+              />
+              <h2>Ресторан <span lang="en">Seafood</span></h2>
+              <p>Приложение</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/portfolio/img-4.jpg"
-              alt="Наушники"
-              width="370"
-            />
-            <h2>Проект <span lang="en">Prime</span></h2>
-            <p>Маркетинг</p>
+            <a href="" target="_blank" rel="noreferrer noopener">
+              <img
+                src="./images/portfolio/img-4.jpg"
+                alt="Наушники"
+                width="370"
+              />
+              <h2>Проект <span lang="en">Prime</span></h2>
+              <p>Маркетинг</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/portfolio/img-5.jpg"
-              alt="Коричневая и белая коробка"
-              width="370"
-            />
-            <h2>Проект <span lang="en">Boxes</span></h2>
-            <p>Приложение</p>
+            <a href="" target="_blank" rel="noreferrer noopener">
+              <img
+                src="./images/portfolio/img-5.jpg"
+                alt="Коричневая и белая коробка"
+                width="370"
+              />
+              <h2>Проект <span lang="en">Boxes</span></h2>
+              <p>Приложение</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/portfolio/img-6.jpg"
-              alt="Монитор с открытым веб-сайтом"
-              width="370"
-            />
-            <h2 lang="en">Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
+            <a href="" target="_blank" rel="noreferrer noopener">
+              <img
+                src="./images/portfolio/img-6.jpg"
+                alt="Монитор с открытым веб-сайтом"
+                width="370"
+              />
+              <h2 lang="en">Inspiration has no Borders</h2>
+              <p>Веб-сайт</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/portfolio/img-7.jpg"
-              alt="Разворот журнала"
-              width="370"
-            />
-            <h2>Издание <span lang="en">Limited Edition</span></h2>
-            <p>Дизайн</p>
+            <a href="" target="_blank" rel="noreferrer noopener">
+              <img
+                src="./images/portfolio/img-7.jpg"
+                alt="Разворот журнала"
+                width="370"
+              />
+              <h2>Издание <span lang="en">Limited Edition</span></h2>
+              <p>Дизайн</p>
+            </a>
           </li>
           <li>
-            <img src="./images/portfolio/img-8.jpg" alt="Бирка" width="370" />
-            <h3>Проект <span lang="en">LAB</span></h3>
-            <p>Маркетинг</p>
+            <a href="" target="_blank" rel="noreferrer noopener">
+              <img src="./images/portfolio/img-8.jpg" alt="Бирка" width="370" />
+              <h3>Проект <span lang="en">LAB</span></h3>
+              <p>Маркетинг</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/portfolio/img-9.jpg"
-              alt="Ноутбук с открытым веб-сайтом"
-              width="370"
-            />
-            <h2 lang="en">Growing Business</h2>
-            <p>Приложение</p>
+            <a href="" target="_blank" rel="noreferrer noopener">
+              <img
+                src="./images/portfolio/img-9.jpg"
+                alt="Ноутбук с открытым веб-сайтом"
+                width="370"
+              />
+              <h2 lang="en">Growing Business</h2>
+              <p>Приложение</p>
+            </a>
           </li>
         </ul>
       </section>
