--- a/index.html
+++ b/index.html
@@ -5,23 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <title>Веб студия</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Шапка сайта -->
-    <header>
+    <header class="header-bg">
       <nav>
-        <a href="./index.html" lang="en">WebStudio</a>
-        <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="#contact">Контакты</a></li>
+        <a href="./index.html" lang="en" class="logo">
+          <span class="logo-cl">Web</span>Studio</a
+        >
+        <ul class="list">
+          <li><a href="./index.html" class="link">Студия</a></li>
+          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+          <li><a href="#contact" class="link">Контакты</a></li>
         </ul>
       </nav>
       <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="list">
+          <li>
+            <a href="mailto:info@devstudio.com" class="link-top-address"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+380961111111" class="link-top-address"
+              >+38 096 111 11 11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
@@ -134,7 +148,9 @@
     </main>
     <!--Подвал страницы-->
     <footer>
-      <a href="./index.html" lang="en">WebStudio</a>
+      <a href="./index.html" lang="en" class="logo">
+        <span class="logo-cl">Web</span>Studio</a
+      >
       <address id="contact">
         <ul>
           <li>
