Добавила фон портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
       </address>
     </header>
     <!-- Основной контент страницы Портфолио-->
-    <main>
+    <main class="portfolio-bg">
       <!--Кнопки классификации проектов-->
       <section>
         <h1 hidden>Классификация проектов</h1>
